<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/visitarLugarTitle" />

    <TextView
        android:id="@+id/VISITAR_LUGAR_ESTAS_EN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/paisActual" />

    <Button
        android:id="@+id/banco"
        android:layout_width="286dp"
        android:layout_height="wrap_content"
        android:onClick="onVisitarBanco"
        android:text="@string/banco" />

    <Button
        android:id="@+id/club"
        android:layout_width="286dp"
        android:layout_height="wrap_content"
        android:onClick="onVisitarClub"
        android:text="@string/club" />

    <Button
        android:id="@+id/biblioteca"
        android:layout_width="286dp"
        android:layout_height="wrap_content"
        android:onClick="onVisitarBiblioteca"
        android:text="@string/biblioteca" />

    <TextView
        android:id="@+id/pista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pista" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ordenEmitidaText" />

    <Button
        android:id="@+id/viajar"
        android:layout_width="111dp"
        android:layout_height="wrap_content"
        android:onClick="onVolverAtras"
        android:text="@string/viajarTextButton" />

    <Button
        android:id="@+id/ordenDeArresto"
        android:layout_width="111dp"
        android:layout_height="wrap_content"
        android:onClick="onVolverAtras"
        android:text="@string/ordenDeArrestoTextButton" />

</LinearLayout>